; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_dxinterop.c_w32gpa.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_dxinterop.c_w32gpa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i32] [i32 111, i32 112, i32 101, i32 110, i32 103, i32 108, i32 51, i32 50, i32 46, i32 100, i32 108, i32 108, i32 0], align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @w32gpa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @w32gpa(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i8* @wglGetProcAddress(i32* %6)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i8*, i8** %5, align 8
  store i8* %11, i8** %2, align 8
  br label %17

12:                                               ; preds = %1
  %13 = call i32 @GetModuleHandleW(i8* bitcast ([13 x i32]* @.str to i8*))
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32*, i32** %3, align 8
  %16 = call i8* @GetProcAddress(i32 %14, i32* %15)
  store i8* %16, i8** %2, align 8
  br label %17

17:                                               ; preds = %12, %10
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i8* @wglGetProcAddress(i32*) #1

declare dso_local i32 @GetModuleHandleW(i8*) #1

declare dso_local i8* @GetProcAddress(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
